Bug 128838 - AUTO-REDACT: Uneditable target
Summary: AUTO-REDACT: Uneditable target
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.beta1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.1.0 target:7.0.1
Keywords:
Depends on:
Blocks: Redaction
  Show dependency treegraph
 
Reported: 2019-11-16 14:21 UTC by Kiyotaka Nishibori
Modified: 2020-09-03 20:37 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kiyotaka Nishibori 2019-11-16 14:21:29 UTC
Description:
Predefined-type target for auto-redact cannot be edited correctly: it can be changed to text-type one.

Steps to Reproduce:
1. add a new target with following settings:
      Type: Predefined
      Content: Credit card number
2. Select the target and click "Edit Taget" button.
3. Change Type: from Predefind to Text.

Actual Results:
The Content field is not switched to text box, but still the dropdown-list and no text can be entered. Moreover, "All fields are required" is shown as the warning if OK is clicked.

Expected Results:
The Content field is switched from the dropdown-list to text box and some text can be entered.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.4.0.0.beta1+
Build ID: 876303943113bb7fa09c3b344a832f714ac2d8e3
CPU threads: 8; OS: Linux 5.3; UI render: default; VCL: gtk3; 
Locale: ja-JP (ja_JP.UTF-8); UI-Language: en-US
Calc: CL
Comment 1 Dieter 2019-11-17 06:43:46 UTC
I confirm, that the warning "All fields are required" appears, but I'm able to switch content field to text box

Version: 6.4.0.0.beta1 (x64)
Build ID: 4d7e5b0c40ed843384704eca3ce21981d4e98920
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

=> NEW because of the warning
Comment 2 Julien Nabet 2020-07-22 11:10:26 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/99213
Comment 3 Kiyotaka Nishibori 2020-07-23 01:05:30 UTC
Julien:

Thank you for your writing a patch. It seems to work well and the dropdown-list can be switched to text box and I can enter some text there.
Comment 4 Commit Notification 2020-07-23 08:15:43 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c61f3f47280334c9589fe37742cad93501540857

tdf#128838: autoredact, change Content UI according to Type when editing target

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2020-07-23 08:18:55 UTC
Cherry-pick for 7.0 branch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/99208
Comment 6 Commit Notification 2020-07-30 11:04:08 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/20a87b075e868ebe036e3e6d0930eb2ee501c334

tdf#128838: autoredact, change Content UI according to Type when editing target

It will be available in 7.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 BogdanB 2020-09-03 20:37:40 UTC
It's ok in
Version: 7.1.0.0.alpha0+
Build ID: e2f4e65a7b8024c00b049eebf0d87637efda7f24
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded