tdf#128838: autoredact, change Content UI according to Type when editing target

Change-Id: I99806c7a7629329a98ade23a3ad1f4c4921ec3ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99213
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>